# codex-knowledge-workflow-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PRIVACY.md  QUICKSTART.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORTED_PLATFORMS.md  TROUBLESHOOTING.md  USER_MANUAL.md  kw.py  pyproject.toml  quality_rubric.md  requirements.txt  sync_to_codex_skills.ps1  sync_to_codex_skills.sh
docs/: acquisition-bundle-protocol.md  agent-reach-integration-guide.md  architecture.md  chrome-probe-integration.md  github-about.md  live-acquisition-v2-validation-2026-07-11.md  live-marx-alienation-validation-2026-07-03.md  native-acquisition-guide.md  output-layout.md  output-quality-standard.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-final-integration.md  phase-quality-review.md  real-world-validation-log.md  release-checklist.md  release-process.md  source-gate.md  validation.md
kw_cli/: __init__.py  acquisition_adapter.py  acquisition_providers.py  agent_reach_adapter.py  agent_reach_runtime.py  bundle.py  canonicalize.py  ingest.py  main.py  redaction.py  run_context.py  source_gate.py  source_status_contract.py
templates/: action_plan.md  creator_script.md  prompt_pack.md  research_brief.md  study_notes.md
tests/: README.md  asr_integration.py  knowledge_workflow_regression.py  live_platform_smoke.py  real_workflow_acceptance.py  test_acquisition_bundle_schema.py  test_agent_reach_acquire_offline.py  test_run_provenance.py  (+13 more)
(+234 files in other folders)
